--- a/exercises/c++/03_arrays_and_vectors/Makefile
+++ b/exercises/c++/03_arrays_and_vectors/Makefile
@@ -1,5 +1,6 @@
 SRC = matrix-transpose.cc \
-	argv-to-types.cc
+	argv-to-types.cc \
+	mean-median.cc
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -g -std=c++14
